--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo": "^20.0.0",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.47.0",
+    "react-native-auth0": "^1.2.0",
     "react-native-elements": "^0.17.0",
     "react-native-vector-icons": "^4.2.0",
     "watchman": "^0.1.8"
