--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "react": "16.0.0-alpha.12",
     "react-native": "^0.47.0",
     "react-native-auth0": "^1.2.0",
+    "react-native-drawer": "^2.5.0",
     "react-native-easy-grid": "^0.1.15",
     "react-native-elements": "^0.17.0",
     "react-native-snap-carousel": "^3.3.4",
     "react-native-vector-icons": "^4.2.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
+    "redux-actions": "^2.2.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "watchman": "^0.1.8"
