Set up basic gameplay logic

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "prop-types": "^15.6.0",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.47.0",
+    "react-native-animatable": "^1.2.4",
     "react-native-auth0": "^1.2.0",
     "react-native-drawer": "^2.5.0",
     "react-native-easy-grid": "^0.1.15",
