--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "redux-actions": "^2.2.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
+    "socket.io-client": "^2.0.4",
     "watchman": "^0.1.8"
   }
 }
