Load and save settings objects

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native": "^0.47.0",
     "react-native-animatable": "^1.2.4",
     "react-native-auth0": "^1.2.0",
+    "react-native-color-picker": "^0.4.0",
     "react-native-drawer": "^2.5.0",
     "react-native-easy-grid": "^0.1.15",
     "react-native-elements": "^0.17.0",
