--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "babel-eslint": "^8.0.1",
     "eslint": "^4.10.0",
     "eslint-plugin-react": "^7.4.0",
-    "jest-expo": "~20.0.0",
     "react-native-scripts": "1.3.1",
     "react-test-renderer": "16.0.0-alpha.12"
   },
@@ -19,15 +18,13 @@
     "test": "node node_modules/jest/bin/jest.js --watch",
     "lint": "eslint --fix src/*.js"
   },
-  "jest": {
-    "preset": "jest-expo"
-  },
   "dependencies": {
     "axios": "^0.17.0",
-    "expo": "^20.0.0",
+    "expo": "21.0.2",
+    "jest-expo": "^22.0.1-SNAPSHOT.2017.11.1",
     "prop-types": "^15.6.0",
     "react": "16.0.0-alpha.12",
-    "react-native": "^0.47.0",
+    "react-native": "0.48.4",
     "react-native-animatable": "^1.2.4",
     "react-native-auth0": "^1.2.0",
     "react-native-color-picker": "^0.4.0",
