--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "contrail-client",
-  "displayName": "contrail-client",
+  "name": "Contrail",
+  "displayName": "Contrail Connect 4",
   "expo": {
     "sdkVersion": "21.0.0"
   }
