--- a/package.json
+++ b/package.json
@@ -4,23 +4,20 @@
   "private": true,
   "devDependencies": {
     "babel-eslint": "^8.0.1",
+    "babel-preset-react-native-stage-0": "^1.0.1",
     "eslint": "^4.10.0",
     "eslint-plugin-react": "^7.4.0",
-    "react-native-scripts": "1.3.1",
     "react-test-renderer": "16.0.0-alpha.12"
   },
-  "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
-    "start": "react-native-scripts start",
-    "eject": "react-native-scripts eject",
-    "android": "react-native-scripts android",
-    "ios": "react-native-scripts ios",
+    "start": "react-native start",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
     "test": "node node_modules/jest/bin/jest.js --watch",
     "lint": "eslint --fix src/*.js"
   },
   "dependencies": {
     "axios": "^0.17.0",
-    "expo": "21.0.2",
     "jest-expo": "^22.0.1-SNAPSHOT.2017.11.1",
     "prop-types": "^15.6.0",
     "react": "16.0.0-alpha.12",
