Use Auth0 web lock for authentication

--- a/ios/ContrailConnect4/Info.plist
+++ b/ios/ContrailConnect4/Info.plist
@@ -21,6 +21,19 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
+	<key>CFBundleURLTypes</key>
+	<array>
+			<dict>
+					<key>CFBundleTypeRole</key>
+					<string>None</string>
+					<key>CFBundleURLName</key>
+					<string>auth0</string>
+					<key>CFBundleURLSchemes</key>
+					<array>
+							<string>org.reactjs.native.example.$(PRODUCT_NAME:rfc1034identifier)</string>
+					</array>
+			</dict>
+	</array>
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
