Get app running on ios and android devices

--- a/app.json
+++ b/app.json
@@ -1,7 +1,4 @@
 {
   "name": "ContrailConnect4",
-  "displayName": "Contrail",
-  "expo": {
-    "sdkVersion": "21.0.0"
-  }
+  "displayName": "Contrail"
 }
