--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -74,6 +74,7 @@ import com.android.build.OutputFile
 
 apply from: "../../node_modules/react-native/react.gradle"
 
+// React Native vector icons
 apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
 
 /**
@@ -135,7 +136,6 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-auth0')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
