--- a/ios/contrail-client.xcodeproj/xcshareddata/xcschemes/contrail-client.xcscheme
+++ b/ios/contrail-client.xcodeproj/xcshareddata/xcschemes/contrail-client.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0820"
+   LastUpgradeVersion = "0620"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "NO"
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "ContrailConnect4.app"
-               BlueprintName = "ContrailConnect4"
-               ReferencedContainer = "container:ContrailConnect4.xcodeproj">
+               BuildableName = "contrail-client.app"
+               BlueprintName = "contrail-client"
+               ReferencedContainer = "container:contrail-client.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -43,9 +43,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "ContrailConnect4Tests.xctest"
-               BlueprintName = "ContrailConnect4Tests"
-               ReferencedContainer = "container:ContrailConnect4.xcodeproj">
+               BuildableName = "contrail-clientTests.xctest"
+               BlueprintName = "contrail-clientTests"
+               ReferencedContainer = "container:contrail-client.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -61,9 +61,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "ContrailConnect4Tests.xctest"
-               BlueprintName = "ContrailConnect4Tests"
-               ReferencedContainer = "container:ContrailConnect4.xcodeproj">
+               BuildableName = "contrail-clientTests.xctest"
+               BlueprintName = "contrail-clientTests"
+               ReferencedContainer = "container:contrail-client.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -71,9 +71,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "ContrailConnect4.app"
-            BlueprintName = "ContrailConnect4"
-            ReferencedContainer = "container:ContrailConnect4.xcodeproj">
+            BuildableName = "contrail-client.app"
+            BlueprintName = "contrail-client"
+            ReferencedContainer = "container:contrail-client.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -94,9 +94,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "ContrailConnect4.app"
-            BlueprintName = "ContrailConnect4"
-            ReferencedContainer = "container:ContrailConnect4.xcodeproj">
+            BuildableName = "contrail-client.app"
+            BlueprintName = "contrail-client"
+            ReferencedContainer = "container:contrail-client.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -113,9 +113,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "ContrailConnect4.app"
-            BlueprintName = "ContrailConnect4"
-            ReferencedContainer = "container:ContrailConnect4.xcodeproj">
+            BuildableName = "contrail-client.app"
+            BlueprintName = "contrail-client"
+            ReferencedContainer = "container:contrail-client.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
