--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-easy-grid": "^0.1.15",
     "react-native-elements": "^0.17.0",
     "react-native-snap-carousel": "^3.3.4",
+    "react-native-svg": "^5.4.1",
     "react-native-vector-icons": "^4.4.2",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
