--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -106,18 +106,29 @@ android {
             abiFilters "armeabi-v7a", "x86"
         }
     }
-    splits {
-        abi {
-            reset()
-            enable enableSeparateBuildPerCPUArchitecture
-            universalApk false  // If true, also generate a universal APK
-            include "armeabi-v7a", "x86"
+    signingConfigs {
+        release {
+            if (project.hasProperty('COINTRAIL_RELEASE_STORE_FILE')) {
+                storeFile file(COINTRAIL_RELEASE_STORE_FILE)
+                storePassword COINTRAIL_RELEASE_STORE_PASSWORD
+                keyAlias COINTRAIL_RELEASE_KEY_ALIAS
+                keyPassword COINTRAIL_RELEASE_KEY_PASSWORD
+            }
         }
     }
     buildTypes {
         release {
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            signingConfig signingConfigs.release
+        }
+    }
+    splits {
+        abi {
+            reset()
+            enable enableSeparateBuildPerCPUArchitecture
+            universalApk false  // If true, also generate a universal APK
+            include "armeabi-v7a", "x86"
         }
     }
     // applicationVariants are e.g. debug, release
