--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Contrail",
-  "version": "0.1.0",
+  "name": "contrail",
+  "version": "1.1.0",
   "private": true,
   "devDependencies": {
     "babel-eslint": "^8.0.1",
