--- a/ios/Contrail.xcodeproj/xcshareddata/xcschemes/Contrail.xcscheme
+++ b/ios/Contrail.xcodeproj/xcshareddata/xcschemes/Contrail.xcscheme
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "ContrailConnect4.app"
-               BlueprintName = "ContrailConnect4"
-               ReferencedContainer = "container:ContrailConnect4.xcodeproj">
+               BuildableName = "Cointrail.app"
+               BlueprintName = "Cointrail"
+               ReferencedContainer = "container:Cointrail.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -43,9 +43,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "ContrailConnect4Tests.xctest"
-               BlueprintName = "ContrailConnect4Tests"
-               ReferencedContainer = "container:ContrailConnect4.xcodeproj">
+               BuildableName = "CointrailTests.xctest"
+               BlueprintName = "CointrailTests"
+               ReferencedContainer = "container:Cointrail.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -61,9 +61,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "ContrailConnect4Tests.xctest"
-               BlueprintName = "ContrailConnect4Tests"
-               ReferencedContainer = "container:ContrailConnect4.xcodeproj">
+               BuildableName = "CointrailTests.xctest"
+               BlueprintName = "CointrailTests"
+               ReferencedContainer = "container:Cointrail.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -71,9 +71,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "ContrailConnect4.app"
-            BlueprintName = "ContrailConnect4"
-            ReferencedContainer = "container:ContrailConnect4.xcodeproj">
+            BuildableName = "Cointrail.app"
+            BlueprintName = "Cointrail"
+            ReferencedContainer = "container:Cointrail.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -94,9 +94,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "ContrailConnect4.app"
-            BlueprintName = "ContrailConnect4"
-            ReferencedContainer = "container:ContrailConnect4.xcodeproj">
+            BuildableName = "Cointrail.app"
+            BlueprintName = "Cointrail"
+            ReferencedContainer = "container:Cointrail.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -113,9 +113,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "ContrailConnect4.app"
-            BlueprintName = "ContrailConnect4"
-            ReferencedContainer = "container:ContrailConnect4.xcodeproj">
+            BuildableName = "Cointrail.app"
+            BlueprintName = "Cointrail"
+            ReferencedContainer = "container:Cointrail.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
