--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
   "name": "cointrail",
   "version": "1.2.0",
-  "private": true,
-  "devDependencies": {
-    "babel-eslint": "^8.0.1",
-    "babel-preset-react-native-stage-0": "^1.0.1",
-    "eslint": "^4.10.0",
-    "eslint-plugin-react": "^7.4.0",
-    "react-test-renderer": "16.0.0-alpha.12"
-  },
+  "description": "An online Connect 4/Tic-Tac-Toe hybrid with no tie games.",
+  "author": "Alex Autem <autem.alex@gmail.com>",
   "scripts": {
     "start": "react-native start",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "test": "node node_modules/jest/bin/jest.js --watch",
     "lint": "eslint --fix src/*.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/aautem/cointrail-client"
+  },
+  "bugs": {
+    "url": "https://github.com/aautem/cointrail-client/issues"
   },
   "dependencies": {
     "axios": "^0.17.0",
@@ -40,5 +41,14 @@
     "redux-thunk": "^2.2.0",
     "socket.io-client": "^2.0.4",
     "watchman": "^0.1.8"
-  }
+  },
+  "devDependencies": {
+    "babel-eslint": "^8.0.1",
+    "babel-preset-react-native-stage-0": "^1.0.1",
+    "eslint": "^4.10.0",
+    "eslint-plugin-react": "^7.4.0",
+    "react-test-renderer": "16.0.0-alpha.12"
+  },
+  "private": true,
+  "license": "GPL-3.0"
 }
